// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test getClueRefs for 35-downs 1`] = `
[
  [
    [
      1,
      1,
    ],
    [
      2,
      1,
    ],
  ],
  [
    [
      1,
      0,
    ],
    [
      3,
      0,
    ],
  ],
  [
    [
      1,
      0,
    ],
    [
      3,
      0,
    ],
  ],
  [
    [
      2,
      1,
    ],
    [
      1,
      1,
    ],
  ],
]
`;

exports[`test getClueRefs for 35-downs with !@ 1`] = `
[
  Set {
    2,
  },
  Set {},
  Set {
    0,
    3,
  },
  Set {
    2,
  },
]
`;

exports[`test getClueRefs for puzzle with refs 1`] = `
[
  [
    [
      1,
      1,
    ],
  ],
  [
    [
      1,
      0,
    ],
    [
      3,
      0,
    ],
  ],
  [
    [
      3,
      0,
    ],
  ],
  [
    [
      2,
      1,
    ],
    [
      1,
      1,
    ],
  ],
]
`;

exports[`test getClueRefs for puzzle with starred clues 1`] = `
[
  [
    [
      2,
      1,
    ],
  ],
  [
    [
      2,
      1,
    ],
  ],
  [
    [
      1,
      0,
    ],
    [
      1,
      1,
    ],
  ],
  [],
]
`;

exports[`test getClueRefs for puzzle without any 1`] = `
[
  Set {},
  Set {},
  Set {},
  Set {},
]
`;

exports[`test getEntryToClueMap 1`] = `
Map {
  "UP" => [
    1,
    0,
    "Not down",
  ],
  "US" => [
    1,
    1,
    "You and I",
  ],
  "PO" => [
    2,
    1,
    "Post office abbr.",
  ],
  "SO" => [
    3,
    0,
    "Then...",
  ],
}
`;
